syntax = "proto3";
package demo;

message Name {
    string first_name = 1;
    string last_name = 2;
}

message Greeting {
    enum GreetingType {
        MORNING = 0;
        AFTERNOON = 1;
    }

    Name name = 1;
    GreetingType greeting_type = 2;
}